Update API_KEY comment in index.html
Updated API_KEY comment to remind replacement.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <script>
         // --- Configuration and Constants ---
-        const API_KEY = "AIzaSyA0Lpp69jFg3UmuygJ_E9mUgGmGQSaEa7o"; // REMEMBER TO REPLACE THIS KEY!
+        const API_KEY = "AIzaSyA0Lpp69jFg3UmuygJ_E9mUgGmGQSaEa7o";
         const DESTINATION = "Whitechapel Road, London E1 1BB, UK";
         const MAX_EMERGENCY_MINUTES = 25;
         const BLUE_LIGHT_MULTIPLIER = 0.6; // 3/5
